--- a/.pylintrc
+++ b/.pylintrc
@@ -36,6 +36,7 @@ load-plugins=
     pylint.extensions.redefined_variable_type,
     pylint.extensions.comparison_placement,
     pylint.extensions.mccabe,
+    pylint_pytest
 
 # Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
 # number of processors available to use.
@@ -69,7 +70,6 @@ fail-under=10.0
 # even if score is above --fail-under value. Syntax same as enable. Messages
 # specified are enabled, while categories only check already-enabled messages.
 fail-on=
-
 
 [MESSAGES CONTROL]
 
