--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ packaging==23.2
 platformdirs==4.1.0
 pluggy==1.3.0
 pylint==3.0.3
+pylint-pytest==1.1.7
 pytest==7.4.4
 pytest-cov==4.1.0
 tomlkit==0.12.3
