--- a/.github/workflows/automation-pipeline.yml
+++ b/.github/workflows/automation-pipeline.yml
@@ -10,6 +10,10 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
+      - name: Set up Python 3.10
+        uses: actions/setup_python@v5
+        with:
+          python-version: '3.10'
       - name: Install packages from requirements.txt
         run: |
           pip install -r requirements.txt
