--- a/.github/workflows/automation-pipeline.yml
+++ b/.github/workflows/automation-pipeline.yml
@@ -11,11 +11,12 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
       - name: Set up Python 3.10
-        uses: actions/setup_python@v5
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
       - name: Install packages from requirements.txt
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Run PyTest Unit Suite
         run: |
