--- a/.github/workflows/automation-pipeline.yml
+++ b/.github/workflows/automation-pipeline.yml
@@ -21,3 +21,11 @@ jobs:
       - name: Run PyTest Unit Suite
         run: |
           pytest tests
+
+  Issue-On-Unit-Test-Fail:
+    needs: Run-Unit-Test-Suite
+    runs-on: ubuntu-latest
+    steps:
+      - name: Test Issue-On-Unit-Test-Fail
+        run: |
+          echo "Issue-On-Unit-Test-Fail works!!!"
