Updated pytest.ini to change the reporting for the test cases to only include calling the tests

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -6,6 +6,8 @@ log_format = %(asctime)s %(levelname)s %(message)s
 log_date_format = %Y-%m-%d %H:%M:%S
 log_file = logs/pytest-logs.txt
 
+junit_duration_report = call
+
 addopts = --strict-markers
 markers = 
     int_input: mark a test as having int inputs.
