--- a/.github/workflows/automation-pipeline.yml
+++ b/.github/workflows/automation-pipeline.yml
@@ -18,9 +18,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run PyTest Unit Suite
+      - name: Generate Unit Test Suite Report
         run: |
-          pytest tests
+          pytest tests --html=./html_reports/unit_test/report.html
+      - name: Commit Unit Test Suite Report to branch
+        add: './html_reports/unit_test'
+        message: 'Saving Unit Test Suite Report to branch'
 
   Issue-On-Unit-Test-Fail:
     needs: Run-Unit-Test-Suite
