--- a/.github/workflows/automation-pipeline.yml
+++ b/.github/workflows/automation-pipeline.yml
@@ -22,8 +22,10 @@ jobs:
         run: |
           pytest tests --html=./html_reports/unit_test/report.html
       - name: Commit Unit Test Suite Report to branch
-        add: './html_reports/unit_test'
-        message: 'Saving Unit Test Suite Report to branch'
+        uses: EndBug/add-and-commit@v9
+        with: 
+          add: './html_reports/unit_test'
+          message: 'Saving Unit Test Suite Report to branch'
 
   Issue-On-Unit-Test-Fail:
     needs: Run-Unit-Test-Suite
