--- a/.github/workflows/automation-pipeline.yml
+++ b/.github/workflows/automation-pipeline.yml
@@ -25,6 +25,7 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with: 
           add: './html_reports/unit_test'
+          default_author: github_actions
           message: 'Saving Unit Test Suite Report to branch'
 
   Issue-On-Unit-Test-Fail:
@@ -34,4 +35,3 @@ jobs:
       - name: Test Issue-On-Unit-Test-Fail
         run: |
           echo "Issue-On-Unit-Test-Fail works!!!"
-          
