Updated comments in confttest.py and test_simple_calculator.py to make it easier to distinguish the sections

--- a/.github/workflows/automation-pipeline.yml
+++ b/.github/workflows/automation-pipeline.yml
@@ -29,10 +29,10 @@ jobs:
           message: 'Saving Unit Test Suite Report to branch'
           push: origin ${{ github.ref }} --force
 
-  Issue-On-Unit-Test-Fail:
-    needs: Run-Unit-Test-Suite
-    runs-on: ubuntu-latest
-    steps:
-      - name: Test Issue-On-Unit-Test-Fail
-        run: |
-          echo "Issue-On-Unit-Test-Fail works!!!"
+  # Issue-On-Unit-Test-Fail:
+  #   needs: Run-Unit-Test-Suite
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Test Issue-On-Unit-Test-Fail
+  #       run: |
+  #         echo "Issue-On-Unit-Test-Fail works!!!"
