--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -6,7 +6,7 @@ log_format = %(asctime)s %(levelname)s %(message)s
 log_date_format = %Y-%m-%d %H:%M:%S
 log_file = logs/pytest-logs.txt
 
-junit_duration_report = call
+generate_report_on_test = true 
 
 addopts = --strict-markers
 markers = 
