--- a/.github/workflows/automation-pipeline.yml
+++ b/.github/workflows/automation-pipeline.yml
@@ -10,10 +10,14 @@ jobs:
   Run-Unit-Test-Suite:
     runs-on: ubuntu-latest
     steps:
+      - name: Temporarily disable "Do not allow bypassing the above settings" branch protection
+        uses: benjefferies/branch-protection-bot@master
+        if: always()
+        with:
+          access_token: ${{ secrets.ACTIONS_PAT }}
+          branch: ${{ github.ref }}
       - name: Check out repository code
         uses: actions/checkout@v4
-        # with:
-        #   token: ${{ secrets.ACTIONS_PAT }}
       - name: Set up Python 3.10
         uses: actions/setup-python@v5
         with:
@@ -32,6 +36,12 @@ jobs:
           default_author: github_actions
           message: 'Saving Unit Test Suite Report to branch'
           push: origin ${{ github.ref }} --force
+      - name: Enable "Do not allow bypassing the above settings" branch protection
+        uses: benjefferies/branch-protection-bot@master
+        if: always()  # Force to always run this step to ensure "Do not allow bypassing the above settings" is always turned back on
+        with:
+          access_token: ${{ secrets.ACTIONS_PAT }}
+          branch: ${{ github.ref }}
 
   # Issue-On-Unit-Test-Fail:
   #   needs: Run-Unit-Test-Suite
