--- a/.github/workflows/automation-pipeline.yml
+++ b/.github/workflows/automation-pipeline.yml
@@ -24,7 +24,7 @@ jobs:
           pip install -r requirements.txt
       - name: Generate Unit Test Suite Report
         run: |
-          pytest tests --html=./html_reports/unit_test/report.html
+          pytest tests -m "int_input" --html=./html_reports/unit_test/report.html
       - name: Commit Unit Test Suite Report to branch
         uses: EndBug/add-and-commit@v9
         with: 
