--- a/.github/workflows/automation-pipeline.yml
+++ b/.github/workflows/automation-pipeline.yml
@@ -23,6 +23,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Generate Unit Test Suite Report
+        continue-on-error: true
         run: |
           pytest tests -m "int_input" --html=./html_reports/unit_test/report.html
       - name: Commit Unit Test Suite Report to branch
